--- a/res/values/aurora_strings.xml
+++ b/res/values/aurora_strings.xml
@@ -21,7 +21,7 @@
     <string name="icon_pack_no_browser">There\'s no available browser</string>
 
     <!-- Application name -->
-    <string name="euclid_app_name" translatable="false">euclid Home</string>
+    <string name="aurora_app_name" translatable="false">aurora Home</string>
 
     <!-- Folder titles -->
     <string name="google_folder_title" translatable="false">Google</string>
@@ -212,11 +212,11 @@
     <string name="action_toast_enabled_summary">Enable-disable Toast clear all</string>
 
     <!-- About info -->
-    <string name="about_app_title" translatable="false">euclid Launcher</string>
+    <string name="about_app_title" translatable="false">Aurora Launcher</string>
     <string name="about_app_subtitle">Based on AOSP Launcher3</string>
     <string name="about_thanks_cat">Special thanks to</string>
     <string name="about">About</string>
-    <string name="about_summary">Info about the euclid Home</string>
+    <string name="about_summary">Info about the aurora Home</string>
 
     <!-- QuickSpace -->
     <string name="show_quickspace_title">At A Glance</string>
@@ -225,7 +225,7 @@
     <string name="quickspace_date_format_minimalistic" translatable="false">EEEE, MMMM d</string>
 
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">Welcome to euclidOS!</string>
+    <string name="quick_event_rom_intro_welcome">Welcome to AuroraDroid!</string>
     <string name="quick_event_rom_intro_welcome_ext">Simply Elegant</string>
     <string-array name="welcome_message_variants">
         <item>Thank you for choosing us</item>
@@ -233,7 +233,7 @@
         <item>Best Rom Ever.</item>
         <item>Say hi to us on Telegram</item>
         <item>Ultimate Performance</item>
-        <item>Welcome to euclidOS</item>
+        <item>Welcome to AuroraDroid</item>
         <item>Almost like pixel launcher</item>
     </string-array>
 
